--- a/src/main/java/SpringDatabaseMigration.properties
+++ b/src/main/java/SpringDatabaseMigration.properties
@@ -13,9 +13,9 @@ jdbc.password=
 # (only applied with "applicationContext-hibernate.xml")
 # hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-migrationfolder=E:\NCIRL\dissertation\workspace\MigrationFolder
+migrationfolder=E:\\NCIRL\\dissertation\\workspace\\MigrationFolder
 
 
 
 # properties to set
-fetchSize=1000
+fetchSize=4
