--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 		<version>5.1.31</version>
 	</dependency>
     
+	<dependency>
+		<groupId>commons-io</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>2.4</version>
+	</dependency>
+    
+
     
     
 </dependencies>
