Fixed bad CVS parse due to commas, debug improved, fixed types, more minor fixes, cleanup

--- a/src/main/java/db.properties
+++ b/src/main/java/db.properties
@@ -1,10 +1,9 @@
 # MySQL Settings
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/petclinic
-jdbc.url=jdbc:mysql://localhost:3306/userdb
-jdbc.username=root
-jdbc.password=
+jdbc.url=jdbc:mysql://localhost:3306/world
+jdbc.username=43
+jdbc.password=kuradura
 
 # Properties that control the population of schema and data for a new data source
 # jdbc.initLocation=classpath:db/mysql/initDB.sql
@@ -14,7 +13,7 @@ jdbc.password=
 # (only applied with "applicationContext-hibernate.xml")
 # hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-migrationfolder=E:\\NCIRL\\dissertation\\workspace\\MigrationFolder
+migrationfolder=D:\\MigrationTest\\World
 
 # properties to configure the thread pool size
 exportThreadPoolSize=5
@@ -28,20 +27,9 @@ fetchSize=500
 #hostname=localhost
 #port=8888
 
-#petclinic
-#port=8080
 
-
-hostname=ajaxcrudjtable13.appspot.com
+hostname=http://madsword-addlobby.appspot.com/
 port=443
 
-
-#hostname=spring-petclinic.appspot.com
-#port=443
-
-
-#hostname=spring-petclinic.appspot.com
-#port=443
-
-userEmail=prasanthmp500@gmail.com
-password=kannan123$
+userEmail=43istesting@gmail.com
+password=test
