Fixed project layout, fixed properties, cleanup

--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -13,7 +13,7 @@ jdbc.password=kuradura
 # (only applied with "applicationContext-hibernate.xml")
 # hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-migrationfolder=D:\\MigrationTest\\World
+migrationfolder=D:\\MigrationTest
 
 # properties to configure the thread pool size
 exportThreadPoolSize=5
@@ -24,12 +24,13 @@ fetchSize=500
 
 # configuration for data exporter
 # localhost
-#hostname=localhost
-#port=8888
+
+hostname=localhost
+port=8888
 
 
-hostname=http://madsword-addlobby.appspot.com/
-port=443
+#hostname=http://madsword-addlobby.appspot.com/
+#port=443
 
 userEmail=43istesting@gmail.com
 password=test
