--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -1,36 +1,28 @@
-# MySQL Settings
-
+#JDBC
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/world
 jdbc.username=43
 jdbc.password=kuradura
 
-# Properties that control the population of schema and data for a new data source
-# jdbc.initLocation=classpath:db/mysql/initDB.sql
-# jdbc.dataLocation=classpath:db/mysql/populateDB.sql
+#Migration
+migration.cvsOutputFolder=D:\\MigrationTest
 
-# Property that determines which Hibernate dialect to use
-# (only applied with "applicationContext-hibernate.xml")
-# hibernate.dialect=org.hibernate.dialect.MySQLDialect
+migration.fetchSize=500
 
-migrationfolder=D:\\MigrationTest
+migration.exportThreadPoolSize=5
+migration.importThreadPoolSize=5
 
-# properties to configure the thread pool size
-exportThreadPoolSize=5
-importThreadPoolSize=5
+#Google App Engine
 
-# properties to set
-fetchSize=500
+#Local
+gae.hostname=localhost
+gae.port=8090
+gae.userEmail=43istesting@gmail.com
+gae.password=test
 
-# configuration for data exporter
-# localhost
+#Remote
+#gae.hostname=http://madsword-addlobby.appspot.com/
+#gae.port=443
+#gae.userEmail=43istesting@gmail.com
+#gae.password=test
 
-hostname=localhost
-port=8888
-
-
-#hostname=http://madsword-addlobby.appspot.com/
-#port=443
-
-userEmail=43istesting@gmail.com
-password=test
