Verbose import/export

--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -21,7 +21,7 @@ gae.userEmail=43istesting@gmail.com
 gae.password=test
 
 #Remote
-#gae.hostname=http://madsword-addlobby.appspot.com/
+#gae.hostname=madsword-addlobby.appspot.com
 #gae.port=443
 #gae.userEmail=43istesting@gmail.com
 #gae.password=test
