Migration limit introduced, type conversion fixes, fixed dropping trailing empty string while parsing CSV

--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -1,6 +1,6 @@
 #JDBC
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/world
+jdbc.url=jdbc:mysql://localhost:3306/adlobby
 jdbc.username=43
 jdbc.password=kuradura
 
@@ -8,6 +8,8 @@ jdbc.password=kuradura
 migration.cvsOutputFolder=D:\\MigrationTest
 
 migration.fetchSize=500
+migration.limit = 50
+#migration.limit = 0
 
 migration.exportThreadPoolSize=5
 migration.importThreadPoolSize=5
