Toggle skip export, fixed datetime parse

--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -8,11 +8,12 @@ jdbc.password=kuradura
 migration.cvsOutputFolder=D:\\MigrationTest
 
 migration.fetchSize=500
-migration.limit = 50
-#migration.limit = 0
+#migration.limit=50
+migration.limit=0
 
 migration.exportThreadPoolSize=5
 migration.importThreadPoolSize=5
+migration.skipExport=false
 
 #Google App Engine
 
