Configuration fixes, import/export skip, ignore fields, ignore tables, fixed mapping, tidy up

--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -1,31 +1,34 @@
-#JDBC
+#### JDBC ####
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/adlobby
 jdbc.username=43
 jdbc.password=kuradura
 
-#Migration
-migration.cvsOutputFolder=D:\\MigrationTest
+#### Migration ####
+#migration.skipExport=true
+#migration.skipImport=true
 
-migration.fetchSize=500
-#migration.limit=50
-migration.limit=0
+migration.export.threadPoolSize=5
+migration.import.threadPoolSize=5
 
-migration.exportThreadPoolSize=5
-migration.importThreadPoolSize=5
-migration.skipExport=false
+## Export ##
+migration.export.folder=D:\\MigrationTest
+migration.export.fetchSize=500
+#migration.export.limit=50
 
-#Google App Engine
+## Import ##
+migration.import.folder=D:\\GAE_DB
 
-#Local
+#### Google App Engine ####
+
+## Local ##
 gae.hostname=localhost
 gae.port=8090
 gae.userEmail=43istesting@gmail.com
 gae.password=test
 
-#Remote
+## Remote ##
 #gae.hostname=madsword-addlobby.appspot.com
 #gae.port=443
 #gae.userEmail=43istesting@gmail.com
 #gae.password=test
-
