--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -18,6 +18,7 @@ migration.export.fetchSize=500
 
 ## Import ##
 migration.import.folder=D:\\GAE_DB
+migration.import.delay=2000
 
 #### Google App Engine ####
 
