Debug, compensating delay, configuration, cleanup

--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -18,7 +18,9 @@ migration.export.fetchSize=500
 
 ## Import ##
 migration.import.folder=D:\\GAE_DB
-migration.import.delay=2000
+migration.import.delay=3500
+#Add the duration of the previous request to each delay
+migration.import.compensatingDelay=true
 
 #### Google App Engine ####
 
@@ -33,3 +35,5 @@ gae.password=test
 #gae.port=443
 #gae.userEmail=43istesting@gmail.com
 #gae.password=test
+
+debug=false
