--- a/src/main/java/resources/db.properties
+++ b/src/main/java/resources/db.properties
@@ -5,22 +5,24 @@ jdbc.username=43
 jdbc.password=kuradura
 
 #### Migration ####
-#migration.skipExport=true
+migration.skipExport=true
 #migration.skipImport=true
 
 migration.export.threadPoolSize=5
 migration.import.threadPoolSize=5
 
 ## Export ##
-migration.export.folder=D:\\MigrationTest
-migration.export.fetchSize=500
+migration.export.folder=D:\\GAE_DB_250
+migration.export.fetchSize=250
 #migration.export.limit=50
 
 ## Import ##
-migration.import.folder=D:\\GAE_DB
-migration.import.delay=3500
+migration.import.folder=D:\\GAE_DB_250
+migration.import.delay=0
 #Add the duration of the previous request to each delay
 migration.import.compensatingDelay=true
+migration.import.break.frequency=50
+migration.import.break.duration=300
 
 #### Google App Engine ####
 
@@ -36,4 +38,4 @@ gae.password=test
 #gae.userEmail=43istesting@gmail.com
 #gae.password=test
 
-debug=false
+debug=true
